app/stylesheets/partials/_events.scss
#more_events {
  clear: both;
  @include hover-link;
}

.event {
  @include column(19);
  margin-bottom: 9px;
  border: 2px solid $border-color;
  @include border-radius;
  padding-top: 9px;

  h1,h2 {
    font-size: 13px;
    font-weight: bold;
  }

  .icon{
    text-align: center
  }

  .time {
    color: $quiet-color
  }

  header>* {
    @include column(2);
    height:48px;
    @include border(lighten($border-color,33%),2px);
  }

  .body {
    @include column(12);
  }

  header.subtitle+.body {
    @include column(10);
  }

  .buttons {
    padding-top: 15px;
    @include column(1,true);
  }

  .extended {
    @include column(18);
    margin: 3px 15px;
    .tabs {
      margin: 5px 0;
      @include column(17);
      border-bottom: 1px solid lighten($border-color,33%);
      li {
        @include column(3);
        list-style:none;
        background: lighten($border-color,33%);
        text-align: center;
        font-weight: bold;
        padding: 4px 0 2px 0;
        &:hover {
          background: lighten($border-color,45%);
        }
        a { 
          color: inherit;
          text-decoration:none;
        }
      }
    }
    .tab {
      clear: both
    }
    .target_body,.target_actions,.target_reflection {
      @include column(7);
    }
    .target_date {
      @include column(4,last);
      #target_target_date {
        @include column(4)
      }
    }
    textarea {
      width: 250px;
      height: 54px;
    }
  }

  .attachments {
    @include column(18);
    margin: 3px 15px;
  }
  
  .mini {
    @include column(18);
    .icon {
      @include column(1);
      text-align:center;
    }
    h1,h2 {
      @include column(2);
    }
    .body {
      @include column(12,true);
    }
  }
}

.event {
  background-color: #ccc
}

.current     {background-color: #eed }
.complete    {background-color: #ded }
.incomplete  {background-color: #edd }
.unknown     {background-color: #ddd }
.not_started {background-color: #dde }

